Maybe fix list not aligned

--- a/style.css
+++ b/style.css
@@ -36,4 +36,5 @@ a {
 ul {
     text-align: center;
     list-style-position: inside;
+    padding-left: 0;
 }
